# GL_BRILL

run/: edge.tga
src/: CMakeLists.txt  brilliant.cpp  brilliant.h  main.cpp
